kubernetes/apps/immich/server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
  namespace: immich
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-server
  template:
    metadata:
      labels:
        app: immich-server
    spec:
      securityContext:
        runAsUser: 3003 # UID
        runAsGroup: 3006 # GID
        fsGroup: 3006
      serviceAccountName: immich-service-account
      containers:
        - name: immich-server
          image: ghcr.io/immich-app/immich-server:release
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "3Gi"
              cpu: "2"
          ports:
            - name: http
              containerPort: 2283
              protocol: TCP
          volumeMounts:
            - name: library
              mountPath: /data
            - name: google-photos-external-library
              mountPath: /photos/google
              readOnly: true
            - name: usb-backups-external-library
              mountPath: /photos/usb-backups
              readOnly: true
      volumes:
        # Libraries
        - name: library
          persistentVolumeClaim:
            claimName: immich-library-nfs-pvc
        - name: google-photos-external-library
          persistentVolumeClaim:
            claimName: immich-google-photos-library-nfs-pvc
        - name: usb-backups-external-library
          persistentVolumeClaim:
            claimName: immich-usb-backups-library-nfs-pvc
