kubernetes/apps/immich/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-server-service
  namespace: immich
spec:
  selector:
    app: immich-server
  ports:
    - name: http
      port: 2283
      targetPort: 2283
  type: ClusterIP
